fmcsadmin
(c) 2017-2018 Emic Corporation <https://www.emic.co.jp/>
This software is distributed under the Apache License, Version 2.0, see LICENSE.txt and NOTICE.txt for more information.

Version: 0.9.3 (in development)
- Add an error message for the FileMaker error code 214.
- Built with Go 1.11.
- [BUG FIX] Fix "-m" and "--message" option of "CLOSE" command. The affected version is 0.9.2 only.

Version: 0.9.2 (beta)
Date: July 6, 2018
- Support FileMaker Admin API (Trial) of FileMaker Server 17 experimentally ("--fqdn" option and handling schedule ID 1 is not supported for FileMaker Server).
- Add "START" command to start a server process for FileMaker Server 17.
- Add "STOP" command to stop a server process for FileMaker Server 17.
- Add "RESTART" command to restart a server process for FileMaker Server 17.
- Add "GET" command to retrieve server or CWP (Custom Web Publishing) configuration settings for FileMaker Server 17.
- Add "SET" command to change server or CWP (Custom Web Publishing) configuration settings for FileMaker Server 17.
- Consider local time zone when listing schedules and outputting timestamp.
- Improve connection error handling.
- Output an error message when detecting an invalid option.
- Add error messages for the FileMaker error code -1, 3 and 4.
- Add error messages for the error code 10001, 10007, 10502, 11000 and 11002.
- Change an error message for the FileMaker error code 9.
- Show an error message of the error code 11005 when specified client ID doesn't exist and using "DISCONNECT" command.
- Adjust showing value of "CONNECT TIME" and "FILE NAME" when listing clients with "STATUS" command.
- Built with Go 1.10.
- [BUG FIX] Fix "DISCONNECT" command.
- [BUG FIX] Show an error message when specified schedule ID doesn't exist and using "ENABLE", "DISABLE" and "RUN" commands.
- [BUG FIX] Fix "SEND" command to send a text message to the clients connected to the specified databases.